# Rate-Limiter

./: CMakeLIsts.txt  CMakeLists.txt  README.md
benchmarks/: benchmark_algorithms.cpp  benchmark_patterns.cpp
include/rate_limiter/: IRateLimiter.hpp  LeakingBucket.hpp  RateLimiterManager.hpp  SlidingWindowLog.hpp  SlidingWindowLogManager.hpp  TokenBucket.hpp
load_tester/: BurstPattern.cpp  DiurnalPattern.cpp  LoadTester.hpp  SparseBurstPattern.cpp  TrafficPattern.hpp  UniformPattern.cpp  ZombiePattern.cpp
report/: charts.py  right_graphic3.py
src/: TokenBucket.cpp  main.cpp
tests/: test_interface_rate_limiter.cpp  test_leaking_bucket.cpp  test_sliding_window_log.cpp  test_token_bucket.cpp  test_ttl_cleanup.cpp
